tests/miniJava/neg/000137_mutation.MiniJava
class java { public return void Main ( String [ ] java ) { { } } }
